# ipl-2026-playoff-odds

./: .gitignore  README.md  azure.yaml  index.legacy.html
.github/workflows/: backend-ci.yml  backend-deploy.yml  frontend-deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/iplodds/: __init__.py  config.py  main.py  routers.py  security.py  sim.py
backend/src/iplodds/agents/: leverage.py  priors.py  qa.py  scout.py  tools.py
backend/src/iplodds/data/: cache.py  cricketdata_client.py  iplt20_client.py
backend/src/iplodds/jobs/: daily_update.py
backend/src/iplodds/llm/: client.py
backend/tests/: test_iplt20_client.py  test_priors.py  test_sim.py
frontend/: index.html  privacy.html  staticwebapp.config.json  styles.css
frontend/js/: analytics.js  api.js  app.js  dev-config.js  jsonp.js  model.js  render.js  sim.js
infra/: main.bicep  main.parameters.json
scripts/: bootstrap.ps1
