[project]
name = "iplodds-backend"
version = "0.1.0"
description = "IPL 2026 playoff-odds backend: data proxy, LLM priors, and tool-calling agent."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "azure-identity>=1.19",
    "azure-storage-blob>=12.23",
    "azure-keyvault-secrets>=4.9",
    "aiohttp>=3.10",
    "openai>=1.54",
    "structlog>=24.4",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "N", "C4", "PIE", "RET", "SIM"]
ignore = ["S101"]  # asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iplodds"]
